Fix marketing website navbar on small screens (#5946)

--- a/website/src/css/nav.css
+++ b/website/src/css/nav.css
@@ -298,6 +298,12 @@ a.menu__link.menu__link--active.menu__link--sublist {
   gap: 4px;
 }
 
+@media (max-width: 996px) {
+  .navbar__item.dropdown {
+    display: none;
+  }
+}
+
 .navbar__item.dropdown:after {
   margin-top: 2px;
   content: "";
